--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.0"
 services:
   crypto-exporter:
-    image: crypto-exporter
+    image: cryptodb-exporter
     build: .
     ports:
-      - "9109:9109"
+      - "9110:9110"
