--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.0"
 services:
-  crypto-exporter:
-    image: cryptodb-exporter
+  401k-exporter:
+    image: 401k-exporter
     build: .
     ports:
-      - "9110:9110"
+      - "9113:9113"
